--- a/localization/english/romaioi_countries_l_english.yml
+++ b/localization/english/romaioi_countries_l_english.yml
@@ -2,6 +2,8 @@
 #Romaioi new nations
  BYZ:0 "Basileía Romaíon"
  BYZ_ADJ:0 "Romaíon"
+ ANA:0 "Anatolia"
+ ANA_ADJ:0 "Anatolian"
  ELY:0 "Elysium"
  ELY_ADJ:0 "Elysian"
  VIN:0 "Vinland"
