--- a/localization/english/romaioi_events_l_english.yml
+++ b/localization/english/romaioi_events_l_english.yml
@@ -12,11 +12,17 @@
 #serbia_rebellion.1.f:0 "Envoys from the Serbian Exarchate arrived in Konstantinople informing us of their declaration of independence."
 #serbia_rebellion.1.a:0 "Unacceptable, Dispatch the Tagmata to Belgrade at once!"
 
-bulgarian_revolt.1.t:0 "Balkan nobles Revolt"
-bulgarian_revolt.1.d:0 "Powerful nobles in the balkans have rallied behind the Doukas family in their demands for greater autonomy."
-bulgarian_revolt.1.f:0 "The Serbian Exarchates along with their relatives in the Themes of Northern Bulgaria have risen up in revolt!."
+bulgarian_revolt.1.t:0 "Balkan Dynatói Revolt"
+bulgarian_revolt.1.d:0 "Powerful Dynatói in the balkans have rallied behind the Doukas family in their demands for greater autonomy."
+bulgarian_revolt.1.f:0 "The Doukai from their power base in Serbia, have taken control of Northern Bulgaria and demand we recognize their illegal annexation."
 bulgarian_revolt.1.a:0 "Crush the traitors at once!"
-bulgarian_revolt.1.b:0 "Grant Autonomy to the rebels."
+bulgarian_revolt.1.b:0 "Grant the Doukai their demands and recognize their claim to the Exarchate of Bulgaria."
+
+anatolian_revolt.1.t:0 "Popular Anatolian Strategoi Revolts"
+anatolian_revolt.1.d:0 "Powerful Strategoi in the Anatolia interior have rallied behind Bardas Phokas in his demands for greater autonomy."
+anatolian_revolt.1.f:0 "Powerful Strategoi in the Anatolia interior have rallied behind Bardas Phokas in his demands for greater autonomy."
+anatolian_revolt.1.a:0 "Bardas Phokas is clearly a threat and must be crushed once and for all."
+anatolian_revolt.1.b:0 "Grant Autonomy to the rebels."
 
 frankish_revolt.1.t:0 "Frankish Lords Revolt"
 frankish_revolt.1.d:0 "Frankish nobles have agitated the frankish countryside into open rebellion."
