--- a/localization/english/romaioi_government_l_english.yml
+++ b/localization/english/romaioi_government_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+
  gov_byz_empire:0 "Basileía Romaíon"
  gov_byz_empire_desc:1 "This is a [concept_government] form where the power rests with the [Concept('concept_ruler','$RULER_TITLE_BASILEUS$')] or [Concept('concept_ruler','$RULER_TITLE_BASILISSA$')]"
  gov_katepano:0 "Katepaníkion"
@@ -7,6 +8,8 @@
  gov_merchant_republic_desc:1 "This is a [concept_government] where the [concept_country] is ruled by a rich and powerful merchant class"
  gov_exarchate:0 "Exarchate"
  gov_exarchate_desc:0 "This is a distant province [concept_government] governed by an [Concept('concept_ruler','$RULER_TITLE_EXARCH$')] under the Romaíon Basileus."
+ gov_independent_exarchate:0 "Exarchate"
+ gov_independent_exarchate_desc:0 "This is a breakaway independent [concept_government] governed by an [Concept('concept_ruler','$RULER_TITLE_EXARCH$')] formerly under the Romaíon Basileus."
  gov_satrapy:0 "Satrapy"
  gov_satrapy_desc:0 "This is a distant province [concept_government] governed by an [Concept('concept_ruler','$RULER_TITLE_SATRAP$')]."
 
