--- a/localization/english/romaioi_names_l_english.yml
+++ b/localization/english/romaioi_names_l_english.yml
@@ -30,10 +30,6 @@
  Belisarios:0 "Belisarios"
  Bartholomaios:0 "Bartholomaios"
  Andronikos:0 "Andronikos"
- Doukas:0 "Doukas"
- Skleros:0 "Skleros"
- Phokas:0 "Phokas"
- Kastriotis:0 "Kastriotis"
  Diogenes:0 "Diogenes"
  Heraclides:0 "Heraclides"
  Nikephoros:0 "Nikephoros"
@@ -43,6 +39,8 @@
  Aurelia:0 "Aurelia"
  Aurelius:0 "Aurelius"
  Tiberios:0 "Tiberios"
+ Bardas:0 "Bardas"
+ 
 
  Alp Arslan:0 "Alp Arslan"
  Arslan:0 "Arslan"
