--- a/localization/english/romaioi_countries_l_english.yml
+++ b/localization/english/romaioi_countries_l_english.yml
@@ -4,6 +4,8 @@
  BYZ_ADJ:0 "Romaíon"
  ANA:0 "Anatolia"
  ANA_ADJ:0 "Anatolian"
+ PNT:0 "Pontos"
+ PNT_ADJ:0 "Pontic"
  ELY:0 "Elysium"
  ELY_ADJ:0 "Elysian"
  VIN:0 "Vinland"
