--- a/localization/english/romaioi_events_l_english.yml
+++ b/localization/english/romaioi_events_l_english.yml
@@ -24,9 +24,23 @@ anatolian_revolt.1.f:0 "Powerful Strategoi in the Anatolia interior have rallied
 anatolian_revolt.1.a:0 "Bardas Phokas is clearly a threat and must be crushed once and for all."
 anatolian_revolt.1.b:0 "Grant Autonomy to the rebels."
 
+anatolian_revolt.2.t:0 "Popular Pontic Strategoi Revolts"
+anatolian_revolt.2.d:0 "Powerful Strategoi in the Pontic hinderland have rallied behind John Komnenos in his demands for greater autonomy."
+anatolian_revolt.2.f:0 "Powerful Strategoi in the Pontic hinderland have rallied behind John Komnenos in his demands for greater autonomy."
+anatolian_revolt.2.a:0 "John Komnenos is clearly a threat and must be crushed once and for all."
+anatolian_revolt.2.b:0 "Grant Autonomy to the rebels."
+
+greek_revolt.1.t:0 "Latin Intervention"
+greek_revolt.1.d:0 "Naval forces made up from a large Latin coalition led by Venice has quickly occupied the lightly garrisoned Islands of Cyprus, Crete and the Ionian Islands and even landed a large force taking control of Attica."
+greek_revolt.1.f:0 "Naval forces made up from a large Latin coalition led by Venice has quickly occupied the lightly garrisoned Islands of Cyprus, Crete and the Ionian Islands and even landed a large force taking control of Attica."
+greek_revolt.1.a:0 "Crush the interlopers and restore Order at once!"
+greek_revolt.1.b:0 "Recognize their occupation for now."
+
 frankish_revolt.1.t:0 "Frankish Lords Revolt"
 frankish_revolt.1.d:0 "Frankish nobles have agitated the frankish countryside into open rebellion."
 frankish_revolt.1.f:0 "Frankish nobles have agitated the frankish countryside into open rebellion."
+frankish_revolt.1.a:0 "Crush and fully integrate all of Francia into our direct domain!"
+frankish_revolt.1.b:0 "Recognize our german speaking subjects as equal to the latin speakers and gave the lords greater autonomy."
 
 je_veiled_exarchate:0 "The Veiled Exarchate of Aegypt"
 je_veiled_exarchate_reason:0 "Our influence in Aegypt has grown considerably, yet our power in the region is dependent on our relations with the breakaway state. By establishing a Exachate over the country, our domination would be assured."
