--- a/localization/english/romaioi_misc_l_english.yml
+++ b/localization/english/romaioi_misc_l_english.yml
@@ -38,7 +38,7 @@ merchant_republic:0 "Merchant Republic"
 noble_tradition:0 "Noble Tradition"
 hre_emperor:0 "Holy Roman Emperor"
 caliph:0 "Caliph"
-pope:0 "Pope"
+#pope:0 "Pope"
 tribal:0 "Tribal"
 arab_tribal:0 "Abbasid Caliphate"
 mali_gold:0 "Large Gold Mines"
@@ -73,6 +73,16 @@ romaioi_themata_primacy:0 "Themata Primacy"
 romaioi_colonial_subsidies:0 "Colonial Subsidies"
 religious_chaos:0 "Religious Chaos"
 romaioi_jihad:0 "Jihad Called"
+decentralized_khanate:0 "Decentralized Khanate"
+merchant_republic:0 "Merchant Republic"
+arab_caliphate:0 "Abbasid Caliphate"
+romaioi_pentarchy:0 "Ecumenical Patriarch"
+pope:0 "Patriarch of Rome"
+patriarch_alexandria:0 "Patriarch Alexandria"
+patriarch_jerusalem:0 "Patriarch Jerusalem"
+patriarch_antioch:0 "Patriarch Antioch"
+holy_roman_empire:0 "Imperator Romanorum"
+eastern_roman_empire:0 "Basileus Romaíon"
 
 #Buildings
 building_great_palace:0 "Great Palace"
