--- a/localization/english/replace/content_1_l_english.yml
+++ b/localization/english/replace/content_1_l_english.yml
@@ -549,7 +549,7 @@
  lesser_opium_addiction_state_mod:0 "Treating Opium Addiction"
  je_sick_man_main:0 "Palaiologos Renaissance"
  je_sick_man_main_reason:0 "We must modernize and restore the Basileía Romaíon to greatness!."
- je_sick_man_main_goal:0 "Complete 4 'Palaiologos' [Concept('concept_journal_entry', '$concept_journal_entries$')]"
+ je_sick_man_main_goal:0 "Complete 6 'Palaiologos' [Concept('concept_journal_entry', '$concept_journal_entries$')]"
  je_sick_man_syria:0 "Palaiologos Reforms: Reclaim Syria"
  je_sick_man_syria_reason:0 "Syria has been lost to the tyrant of Aegypt, who stole his dominion from our rightful hands. We must reclaim it!"
  je_sick_man_syria_status:0 "Starting a diplomatic play against Aegypt will give European [Concept('concept_great_power', '$concept_great_powers$')] an [concept_active_interest] in the region."
@@ -580,7 +580,7 @@
  ottoman_army_reform:0 "Romaíon Army Reorganization"
  ottoman_urbanization:0 "Romaíon Urbanization"
  ottoman_education:0 "Romaíon Education"
- sick_man.3.t:0 "The Dead Man of Europe"
+ sick_man.3.t:0 "The Palaiologos Failure"
  sick_man.3.d:0 "The [ROOT.GetCountry.GetName] has failed to modernize and re-assert itself on the world stage. The vultures begin to circle as the last days of the [ROOT.GetCountry.GetName] draw near."
  sick_man.3.f:0 "The Basileía Romaíon falls silent. Just days after announcing [SCOPE.sCharacter('ottoman_sultan').GetHerHis] intention to abdicate, most likely under the duress of [SCOPE.sCharacter('ottoman_sultan').GetHerHis] ministers, the [SCOPE.sCharacter('ottoman_sultan').GetPrimaryRoleTitle] has been found dead in [SCOPE.sCharacter('ottoman_sultan').GetHerHis] chambers. Much like our precious empire, the [SCOPE.sCharacter('ottoman_sultan').GetPrimaryRoleTitle] had been suffering from a long, creeping sickness that ultimately made [SCOPE.sCharacter('ottoman_sultan').GetHerHim] unable to bear the weight of the crown. A broken and deranged shadow of [SCOPE.sCharacter('ottoman_sultan').GetHerHis] former self."
  sick_man.3.a:0 "We belong to God, and to Him do we return."
