--- a/localization/english/romaioi_events_l_english.yml
+++ b/localization/english/romaioi_events_l_english.yml
@@ -83,6 +83,12 @@ egyptian_crisis_events.4.f:1 ""I'm not sure why we would ever express any intere
 egyptian_crisis_events.4.a:0 "We need to keep an eye on the region."
 egyptian_crisis_events.4.b:0 "We have no interest in this crisis."
 
+je_sick_man_africa:0 "Palaiologos Reforms: Reclaim Africa"
+je_sick_man_africa_reason:0 "We should turn our attention to Africa. Rightfully an Basileía Romaíon possession, it has fallen into the hands of a usurper."
+je_sick_man_italy:0 "Palaiologos Reforms: Reclaim Italia"
+je_sick_man_italy_reason:0 "We should turn our attention to It. Rightfully an Basileía Romaíon possession, it has fallen into the hands of a usurper."
+ 
+
 #romaioi decisions 
 
 end_latin_privileges:0 "End Latin Trade Privileges."
