--- a/localization/english/romaioi_names_l_english.yml
+++ b/localization/english/romaioi_names_l_english.yml
@@ -25,6 +25,7 @@
  Jagiellon:0 "Jagiellon"
  Carolingion:0 "Carolingion"
  Gurkani:0 "Gurkani"
+ Ming:0 "Ming"
 
  #First Names
  Belisarios:0 "Belisarios"
