--- a/localization/english/romaioi_government_l_english.yml
+++ b/localization/english/romaioi_government_l_english.yml
@@ -15,10 +15,6 @@
  gov_themata:0 "Thémata"
  gov_themata_desc:0 "[concept_government] is a military district governed by an [Concept('concept_ruler','$RULER_TITLE_STRATEGOS$')] within the Basileía Romaíon."
 
-
- subject_type_exarchate:0 "Exarchate"
- subject_type_exarchate_desc:0 "This is a government form where the power rests mainly with the Exarch."
-
  RULER_TITLE_EXARCH:0 "Exarchos"
  RULER_TITLE_KATEPANO:0 "Katepanō"
  RULER_TITLE_BASILEUS:0 "Basileus"
@@ -27,82 +23,84 @@
  RULER_TITLE_SATRAP:0 "Satrap"
  RULER_TITLE_STRATEGOS:0 "Strategos"
 
- #subject_type_exarchate:0 "[concept_exarchate]"
+# subject_type_exarchate:0 "Exarchate"
+# subject_type_exarchate_desc:0 "This is a government form where the power rests mainly with the Exarch."
+# subject_type_exarchate:0 "[concept_exarchate]"
 
- concept_exarchate:0 "Exarchate"
- concept_exarchates:0 "Exarchates"
- concept_exarchate_desc:2 "[Concept('concept_recognized_power','$concept_recognized_powers$')] may turn a weaker [concept_country] into their $concept_exarchate$. A $concept_exarchate$ is a [concept_subject] type that cannot start their own [Concept('concept_diplomatic_play','$concept_diplomatic_plays$')] yet are forced to join their [Concept('concept_overlord','$concept_overlord_possessive$')] [Concept('concept_war','$concept_wars$')], and must also pay #v 20%#! of their [concept_treasury] income to their $concept_overlord$ each week. A $concept_exarchate$'s [concept_rank] cannot increase to match or exceed their $concept_overlord$'s, and their $concept_overlord$ may target them with the #b Annexation#! $concept_diplomatic_play$."
+# concept_exarchate:0 "Exarchate"
+# concept_exarchates:0 "Exarchates"
+# concept_exarchate_desc:2 "[Concept('concept_recognized_power','$concept_recognized_powers$')] may turn a weaker [concept_country] into their $concept_exarchate$. A $concept_exarchate$ is a  [concept_subject] type that cannot start their own [Concept('concept_diplomatic_play','$concept_diplomatic_plays$')] yet are forced to join their [Concept('concept_overlord',   '$concept_overlord_possessive$')] [Concept('concept_war','$concept_wars$')], and must also pay #v 20%#! of their [concept_treasury] income to their $concept_overlord$ each week. A $concept_exarchate$'s [concept_rank] cannot increase to match or exceed their $concept_overlord$'s, and their $concept_overlord$ may target them with the #b Annexation#! $concept_diplomatic_play$."
 
- dp_make_exarchate:0 "$war_goal_make_exarchate_type_name$"
- dp_make_exarchate_tooltip:1 "#header Start a $dp_make_exarchate$ [concept_diplomatic_play]#!\n$TOOLTIP_DELIMITER$\n$dp_make_exarchate_desc$"
- dp_make_exarchate_desc:0 "Sets the initiating [concept_war_goal] to force the targeted [concept_country] to become your [concept_exarchate]."
+# dp_make_exarchate:0 "$war_goal_make_exarchate_type_name$"
+# dp_make_exarchate_tooltip:1 "#header Start a $dp_make_exarchate$ [concept_diplomatic_play]#!\n$TOOLTIP_DELIMITER$\n$dp_make_exarchate_desc$"
+# dp_make_exarchate_desc:0 "Sets the initiating [concept_war_goal] to force the targeted [concept_country] to become your [concept_exarchate]."
 
- make_exarchate:0 "Make Exarchate"
- war_goal_make_exarchate_type_name:0 "Make Exarchate"
- war_goal_make_exarchate_type_desc:1 "Force another country to become a [concept_exarchate]."
- war_goal_make_exarchate:0 "exarchate [WAR_GOAL.GetTarget.GetName]"
- war_goal_make_exarchate_desc:1 "[WAR_GOAL.GetHolder.GetName] forces [WAR_GOAL.GetTarget.GetName] to become a [concept_exarchate]."
- war_goal_make_exarchate_sway_desc:1 "Try to convince [WAR_GOAL.GetHolder.GetName] to join your side by forcing [WAR_GOAL.GetTarget.GetName] to become your [concept_exarchate]."
+# make_exarchate:0 "Make Exarchate"
+# war_goal_make_exarchate_type_name:0 "Make Exarchate"
+# war_goal_make_exarchate_type_desc:1 "Force another country to become a [concept_exarchate]."
+# war_goal_make_exarchate:0 "exarchate [WAR_GOAL.GetTarget.GetName]"
+# war_goal_make_exarchate_desc:1 "[WAR_GOAL.GetHolder.GetName] forces [WAR_GOAL.GetTarget.GetName] to become a [concept_exarchate]."
+# war_goal_make_exarchate_sway_desc:1 "Try to convince [WAR_GOAL.GetHolder.GetName] to join your side by forcing [WAR_GOAL.GetTarget.GetName] to become your [concept_exarchate]."
  
- exarchate:0 "Exarchate"
- exarchate_action_name:0 "[concept_exarchate]"
- exarchate_action_propose_name:0 "Make into [concept_exarchate]"
- exarchate_action_break_name:0 "Grant Independence"
- exarchate_action_ask_to_break_name:0 "Demand Independence"
- exarchate_desc:1 "#header $exarchate$#!\n$TOOLTIP_DELIMITER$\nA [concept_diplomatic_pact] that establishes a [concept_exarchate] type [concept_subject] relationship between two [Concept('concept_country', '$concept_countries$')]."
- exarchate_pact_desc:0 "[SCOPE.GetRootScope.GetDiplomaticPact.GetSecondCountry.GetName] is a [concept_exarchate] of [SCOPE.GetRootScope.GetDiplomaticPact.GetFirstCountry.GetName]."
- exarchate_proposal_notification_name:0 "Subjugation Demand"
- exarchate_proposal_notification_desc:0 "[INITIATOR_COUNTRY.GetName] demands that we submit to them and become their [concept_exarchate]."
- exarchate_proposal_notification_effects_desc:0 "If we accept, we will become their subject."
- exarchate_proposal_accepted_name:0 "Subjugation Accepted"
- exarchate_proposal_accepted_desc:0 "[TARGET_COUNTRY.GetName] accepted the demand for them to become our [concept_exarchate]."
- exarchate_proposal_declined_name:0 "Subjugation Refused"
- exarchate_proposal_declined_desc:0 "[TARGET_COUNTRY.GetName] declined the demand for them to become our [concept_exarchate]."
- exarchate_action_notification_break_name:0 "Independence Granted"
- exarchate_action_notification_break_desc:0 "[INITIATOR_COUNTRY.GetName] have ended our [concept_exarchate] status. We are independent once again."
- exarchate_proposal_notification_break_name:0 "Demand for Independence"
- exarchate_proposal_notification_break_desc:0 "[INITIATOR_COUNTRY.GetName] are demanding that we end their [concept_exarchate] status."
- exarchate_proposal_notification_break_effects_desc:0 "If we accept, they will become fully independent."
- exarchate_proposal_break_accepted_name:0 "Independence Granted"
- exarchate_proposal_break_accepted_desc:0 "[TARGET_COUNTRY.GetName] accepted the demand to end our [concept_exarchate] status. We are independent once again."
- exarchate_proposal_break_declined_name:0 "Independence Refused"
- exarchate_proposal_break_declined_desc:0 "[TARGET_COUNTRY.GetName] refused the demand to end our [concept_exarchate] status."
- exarchate_proposal_third_party_accepted_name:0 "Country Subjugated"
- exarchate_proposal_third_party_accepted_desc:0 "[TARGET_COUNTRY.GetName] agreed to become the [concept_exarchate] of [INITIATOR_COUNTRY.GetName]."
- exarchate_proposal_third_party_declined_name:0 "Subjugation Refused"
- exarchate_proposal_third_party_declined_desc:0 "[TARGET_COUNTRY.GetName] refused to become the [concept_exarchate] of [INITIATOR_COUNTRY.GetName]."
- exarchate_action_third_party_notification_break_name:0 "Independence Granted"
- exarchate_action_third_party_notification_break_desc:0 "[INITIATOR_COUNTRY.GetName] ended the [concept_exarchate] status of [TARGET_COUNTRY.GetName], granting them full independence."
- exarchate_proposal_third_party_break_accepted_name:0 "Independence Granted"
- exarchate_proposal_third_party_break_accepted_desc:0 "[TARGET_COUNTRY.GetName] ended the [concept_exarchate] status of [INITIATOR_COUNTRY.GetName], granting them full independence."
- exarchate_proposal_third_party_break_declined_name:0 "Independence Refused"
- exarchate_proposal_third_party_break_declined_desc:0 "[TARGET_COUNTRY.GetName] refused to end the [concept_exarchate] status of [INITIATOR_COUNTRY.GetName]."
+# exarchate:0 "Exarchate"
+# exarchate_action_name:0 "[concept_exarchate]"
+# exarchate_action_propose_name:0 "Make into [concept_exarchate]"
+# exarchate_action_break_name:0 "Grant Independence"
+# exarchate_action_ask_to_break_name:0 "Demand Independence"
+# exarchate_desc:1 "#header $exarchate$#!\n$TOOLTIP_DELIMITER$\nA [concept_diplomatic_pact] that establishes a [concept_exarchate] type [concept_subject] relationship between two [Concept('concept_country', '$concept_countries$')]."
+# exarchate_pact_desc:0 "[SCOPE.GetRootScope.GetDiplomaticPact.GetSecondCountry.GetName] is a [concept_exarchate] of [SCOPE.GetRootScope.GetDiplomaticPact.GetFirstCountry.GetName]."
+# exarchate_proposal_notification_name:0 "Subjugation Demand"
+# exarchate_proposal_notification_desc:0 "[INITIATOR_COUNTRY.GetName] demands that we submit to them and become their [concept_exarchate]."
+# exarchate_proposal_notification_effects_desc:0 "If we accept, we will become their subject."
+# exarchate_proposal_accepted_name:0 "Subjugation Accepted"
+# exarchate_proposal_accepted_desc:0 "[TARGET_COUNTRY.GetName] accepted the demand for them to become our [concept_exarchate]."
+# exarchate_proposal_declined_name:0 "Subjugation Refused"
+# exarchate_proposal_declined_desc:0 "[TARGET_COUNTRY.GetName] declined the demand for them to become our [concept_exarchate]."
+# exarchate_action_notification_break_name:0 "Independence Granted"
+# exarchate_action_notification_break_desc:0 "[INITIATOR_COUNTRY.GetName] have ended our [concept_exarchate] status. We are independent once again."
+# exarchate_proposal_notification_break_name:0 "Demand for Independence"
+# exarchate_proposal_notification_break_desc:0 "[INITIATOR_COUNTRY.GetName] are demanding that we end their [concept_exarchate] status."
+# exarchate_proposal_notification_break_effects_desc:0 "If we accept, they will become fully independent."
+# exarchate_proposal_break_accepted_name:0 "Independence Granted"
+# exarchate_proposal_break_accepted_desc:0 "[TARGET_COUNTRY.GetName] accepted the demand to end our [concept_exarchate] status. We are independent once again."
+# exarchate_proposal_break_declined_name:0 "Independence Refused"
+# exarchate_proposal_break_declined_desc:0 "[TARGET_COUNTRY.GetName] refused the demand to end our [concept_exarchate] status."
+# exarchate_proposal_third_party_accepted_name:0 "Country Subjugated"
+# exarchate_proposal_third_party_accepted_desc:0 "[TARGET_COUNTRY.GetName] agreed to become the [concept_exarchate] of [INITIATOR_COUNTRY.GetName]."
+# exarchate_proposal_third_party_declined_name:0 "Subjugation Refused"
+# exarchate_proposal_third_party_declined_desc:0 "[TARGET_COUNTRY.GetName] refused to become the [concept_exarchate] of [INITIATOR_COUNTRY.GetName]."
+# exarchate_action_third_party_notification_break_name:0 "Independence Granted"
+# exarchate_action_third_party_notification_break_desc:0 "[INITIATOR_COUNTRY.GetName] ended the [concept_exarchate] status of [TARGET_COUNTRY.GetName], granting them full independence."
+# exarchate_proposal_third_party_break_accepted_name:0 "Independence Granted"
+# exarchate_proposal_third_party_break_accepted_desc:0 "[TARGET_COUNTRY.GetName] ended the [concept_exarchate] status of [INITIATOR_COUNTRY.GetName], granting them full independence."
+# exarchate_proposal_third_party_break_declined_name:0 "Independence Refused"
+# exarchate_proposal_third_party_break_declined_desc:0 "[TARGET_COUNTRY.GetName] refused to end the [concept_exarchate] status of [INITIATOR_COUNTRY.GetName]."
   
- exarchate_effect_desc_global:0 "Becomes a [concept_exarchate]"
- exarchate_effect_desc_first:0 "[TARGET_COUNTRY.GetName] becomes a [COUNTRY.GetAdjectiveNoFlag] [concept_exarchate]"
- exarchate_effect_desc_third:0 "[AddTextIf(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self),TARGET_COUNTRY.GetNameNoFlag)][AddTextIf(Not(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self)),TARGET_COUNTRY.GetName)] becomes a [concept_exarchate] of [COUNTRY.GetName]"
+# exarchate_effect_desc_global:0 "Becomes a [concept_exarchate]"
+# exarchate_effect_desc_first:0 "[TARGET_COUNTRY.GetName] becomes a [COUNTRY.GetAdjectiveNoFlag] [concept_exarchate]"
+# exarchate_effect_desc_third:0 "[AddTextIf(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self),TARGET_COUNTRY.GetNameNoFlag)][AddTextIf(Not(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self)),TARGET_COUNTRY.GetName)] becomes a [concept_exarchate] of [COUNTRY.GetName]"
  
- exarchate_trigger_desc_global:0 "Is a [concept_exarchate]"
- exarchate_trigger_false_desc_global:0 "Is #b not#! a [concept_exarchate]"
- exarchate_trigger_desc_first:0 "[TARGET_COUNTRY.GetName] is a [COUNTRY.GetAdjectiveNoFlag] [concept_exarchate]"
- exarchate_trigger_false_desc_first:0 "[TARGET_COUNTRY.GetName] is #b not#! a [COUNTRY.GetAdjectiveNoFlag] [concept_exarchate]"
- exarchate_trigger_desc_third:0 "[AddTextIf(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self),TARGET_COUNTRY.GetNameNoFlag)][AddTextIf(Not(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self)),TARGET_COUNTRY.GetName)] is a [concept_exarchate] of [COUNTRY.GetName]"
- exarchate_trigger_false_desc_third:0 "[AddTextIf(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self),TARGET_COUNTRY.GetNameNoFlag)][AddTextIf(Not(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self)),TARGET_COUNTRY.GetName)] is #b not#! a [concept_exarchate] of [COUNTRY.GetName]"
+# exarchate_trigger_desc_global:0 "Is a [concept_exarchate]"
+# exarchate_trigger_false_desc_global:0 "Is #b not#! a [concept_exarchate]"
+# exarchate_trigger_desc_first:0 "[TARGET_COUNTRY.GetName] is a [COUNTRY.GetAdjectiveNoFlag] [concept_exarchate]"
+# exarchate_trigger_false_desc_first:0 "[TARGET_COUNTRY.GetName] is #b not#! a [COUNTRY.GetAdjectiveNoFlag] [concept_exarchate]"
+# exarchate_trigger_desc_third:0 "[AddTextIf(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self),TARGET_COUNTRY.GetNameNoFlag)][AddTextIf(Not(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self)),TARGET_COUNTRY.GetName)] is a [concept_exarchate] of [COUNTRY.GetName]"
+# exarchate_trigger_false_desc_third:0 "[AddTextIf(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self),TARGET_COUNTRY.GetNameNoFlag)][AddTextIf(Not(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self)),TARGET_COUNTRY.GetName)] is #b not#! a [concept_exarchate] of [COUNTRY.GetName]"
 
- exarchate_action_notification_name:0 "Notification message here"
- exarchate_action_notification_desc:0 "Notification description here"
+# exarchate_action_notification_name:0 "Notification message here"
+# exarchate_action_notification_desc:0 "Notification description here"
  
- become_exarchate:0 "Ask to Become exarchate"
- become_exarchate_action_name:0 "Ask to Become [concept_exarchate]"
- become_exarchate_desc:1 "#header $become_exarchate$#!\n$TOOLTIP_DELIMITER$\nA [concept_diplomatic_pact] that establishes a [concept_exarchate] type [concept_subject] relationship between two [Concept('concept_country', '$concept_countries$')], with the proposing country becoming the [concept_subject]."
- become_exarchate_proposal_notification_name:0 "Request to Become [concept_exarchate]"
- become_exarchate_proposal_notification_desc:0 "[INITIATOR_COUNTRY.GetName] wishes to submit to us and become our [concept_exarchate]."
- become_exarchate_proposal_notification_effects_desc:0 "If we accept, they will become our subject."
- become_exarchate_proposal_accepted_name:0 "[concept_exarchate] Request Accepted"
- become_exarchate_proposal_accepted_desc:0 "[TARGET_COUNTRY.GetName] accepted our offer to become their [concept_exarchate]."
- become_exarchate_proposal_declined_name:0 "[concept_exarchate] Request Declined"
- become_exarchate_proposal_declined_desc:0 "[TARGET_COUNTRY.GetName] declined our offer to become their [concept_exarchate]."
- become_exarchate_proposal_third_party_accepted_name:0 "Country Subjugated"
- become_exarchate_proposal_third_party_accepted_desc:0 "[TARGET_COUNTRY.GetName] agreed to become the $suzerain$ of [INITIATOR_COUNTRY.GetName], who is now their [concept_exarchate]."
- become_exarchate_proposal_third_party_declined_name:0 "Subjugation Refused"
- become_exarchate_proposal_third_party_declined_desc:0 "[TARGET_COUNTRY.GetName] refused to become the $suzerain$ of [INITIATOR_COUNTRY.GetName]."
+# become_exarchate:0 "Ask to Become exarchate"
+# become_exarchate_action_name:0 "Ask to Become [concept_exarchate]"
+# become_exarchate_desc:1 "#header $become_exarchate$#!\n$TOOLTIP_DELIMITER$\nA [concept_diplomatic_pact] that establishes a [concept_exarchate] type [concept_subject] relationship between two [Concept('concept_country', '$concept_countries$')], with the proposing country becoming the [concept_subject]."
+# become_exarchate_proposal_notification_name:0 "Request to Become [concept_exarchate]"
+# become_exarchate_proposal_notification_desc:0 "[INITIATOR_COUNTRY.GetName] wishes to submit to us and become our [concept_exarchate]."
+# become_exarchate_proposal_notification_effects_desc:0 "If we accept, they will become our subject."
+# become_exarchate_proposal_accepted_name:0 "[concept_exarchate] Request Accepted"
+# become_exarchate_proposal_accepted_desc:0 "[TARGET_COUNTRY.GetName] accepted our offer to become their [concept_exarchate]."
+# become_exarchate_proposal_declined_name:0 "[concept_exarchate] Request Declined"
+# become_exarchate_proposal_declined_desc:0 "[TARGET_COUNTRY.GetName] declined our offer to become their [concept_exarchate]."
+# become_exarchate_proposal_third_party_accepted_name:0 "Country Subjugated"
+# become_exarchate_proposal_third_party_accepted_desc:0 "[TARGET_COUNTRY.GetName] agreed to become the $suzerain$ of [INITIATOR_COUNTRY.GetName], who is now their [concept_exarchate]."
+# become_exarchate_proposal_third_party_declined_name:0 "Subjugation Refused"
+# become_exarchate_proposal_third_party_declined_desc:0 "[TARGET_COUNTRY.GetName] refused to become the $suzerain$ of [INITIATOR_COUNTRY.GetName]."
