--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -198,7 +198,7 @@
  DAI_ADJ:0 "Vietnamese"
  DAK:0 "Dar al Kuti"
  DAK_ADJ:0 "Kutian"
- DEN:0 "Denmark"
+ DEN:0 "North Sea Empire"
  DEN_ADJ:0 "Danish"
  DES:0 "Deseret"
  DES_ADJ:0 "Mormon"
