--- a/localization/english/replace/cultures_l_english.yml
+++ b/localization/english/replace/cultures_l_english.yml
@@ -14,7 +14,7 @@
  swiss:0 "Swiss"
  scandinavian_culture_group:0 "Scandinavian"
  swedish:0 "Swedish"
- danish:0 "Danish"
+ danish:0 "Dane"
  norwegian:0 "Norwegian"
  icelandic:0 "Icelandic"
  finnish:0 "Finnish"
