--- a/localization/english/romaioi_countries_l_english.yml
+++ b/localization/english/romaioi_countries_l_english.yml
@@ -53,8 +53,8 @@
  ACA_ADJ:0 "Granadian"
  RIC:0 "Etaireía Indía"
  RIC_ADJ:0 "Indía"
- ATC:0 "Dutch West India Company"
- ATC_ADJ:0 "Dutch West India Company"
+ ATC:0 "Dutch West Indies"
+ ATC_ADJ:0 "Dutch West Indies"
  FRI:0 "Formosa"
  FRI_ADJ:0 "Formosan"
  JSB:0 "Shiberia"
@@ -72,7 +72,7 @@
  dyn_c_abbasid_adj:0 "Abbasid"
  dyn_c_goldenhorde:0 "Golden Horde"
  dyn_c_goldenhorde_adj:0 "Golden"
- dyn_c_khazer:0 "Khazer Khanate"
+ dyn_c_khazer:0 "Khazar Khaganate"
  dyn_c_khazer_adj:0 "Khazer"
  dyn_c_HRE:0 "Holy Roman Empire"
  dyn_c_HRE_adj:0 "Holy Roman"
