--- a/localization/english/romaioi_misc_l_english.yml
+++ b/localization/english/romaioi_misc_l_english.yml
@@ -14,6 +14,7 @@ ig_syndikalistai:0 "Syndikalistaí"
 ig_agrotikos:0 "Paroíkoi" #Paroíkoi Agrotikós
 
 ig_neo_hellenes:0 "Pántheon Anavíosi" #Néoi Éllines is a modern greek translation of New Hellenes
+ig_norse_priests:0 "Norse Priests"
 
 #ideology
 ideology_romaioi_patriarch:0 "The Ecumenical Patriarchate"
@@ -148,4 +149,17 @@ ai_strategy_romaioi_agenda:0 "Romaíon Agenda"
 ai_strategy_romaioi_agenda_desc:0 "Romaíon Agenda"
 ai_strategy_agressive_expansion:0 "Aggressive Expansion"
 ai_strategy_agressive_expansion_desc:0 "Aggressive Expansion"
+
+#Japan expansion
+
+ig_chonin:0 "Chōnin"
+ig_rangakusha:0 "Rangaku-sha"
+ig_daimyo:0 "Daimyo"
+ig_craftsmen:0 "Craftsmen"
+ 
+edo_class_system:0 "Edo Social Class System"
+edo_society_ig:0 "Edo Society"
+
+RYU:0 "Ryukyu Kingdom"
+RYU_ADJ:0 "Ryukyun"
 
