--- a/localization/english/romaioi_names_l_english.yml
+++ b/localization/english/romaioi_names_l_english.yml
@@ -28,6 +28,7 @@
  Medici:0 "Medici"
  Sforza:0 "Sforza"
  d_Este:0 "d'Este"
+ Sigurdsson:0 "Sigurdsson"
 
  #First Names
  Belisarios:0 "Belisarios"
@@ -43,6 +44,7 @@
  Tiberios:0 "Tiberios"
  Bardas:0 "Bardas"
  Maurianos:0 "Maurianos"
+ Abubakari:0 "Abubakari"
  
  
  Alp Arslan:0 "Alp Arslan"
