--- a/localization/english/romaioi_countries_l_english.yml
+++ b/localization/english/romaioi_countries_l_english.yml
@@ -8,6 +8,8 @@
  TBZ_ADJ:0 "Trebizond"
  EPR:0 "Epirus"
  EPR:0 "Epirus"
+ MRE:0 "Morea"
+ MRE_ADJ:0 "Morean"
  ELY:0 "Elysium"
  ELY_ADJ:0 "Elysian"
  VIN:0 "Vinland"
