--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -585,7 +585,7 @@
  HUB_NAME_STATE_BOSNIA_mine:0 "Martari"
  HUB_NAME_STATE_BOSNIA_farm:0 "Castra"
  HUB_NAME_STATE_BOSNIA_wood:0 "Visoki"
- HUB_NAME_STATE_NORTHERN_SERBIA_city:0 "Beligradio"
+ HUB_NAME_STATE_NORTHERN_SERBIA_city:0 "Belgrade"
  HUB_NAME_STATE_NORTHERN_SERBIA_mine:0 "Krousevats"
  HUB_NAME_STATE_NORTHERN_SERBIA_farm:0 "Smederevo"
  HUB_NAME_STATE_NORTHERN_SERBIA_wood:0 "Kralievo"
