--- a/localization/english/romaioi_names_l_english.yml
+++ b/localization/english/romaioi_names_l_english.yml
@@ -53,3 +53,99 @@
  Vladislaus:0 "Vladislaus"
  Kertarajasa:0 "Kertarajasa"
  Babur:0 "Babur"
+
+#Quechua
+
+#Male First Names
+ Atawallpa: "Atawallpa"
+ Wayna: "Wayna"
+ Wanka: "Wanka"
+ Washkar: "Washkar"
+ Rimaq: "Rimaq"
+ Ruminaki: "Ruminaki"
+ Sapay: "Sapay"
+ Sumainka: "Sumainka"
+ Tupakusi: "Tupakusi"
+ Ukumari: "Ukumari"
+ Wallpaya: "Wallpaya"
+ Wamay: "Wamay"
+ Anti: "Anti"
+ Anqasmayu: "Anqasmayu"
+ Chikan: "Chikan"
+ Inti: "Inti"
+ Intiawki: "Intiawki"
+ Hatuntupaq: "Hatuntupaq"
+ Kusiwallpa: "Kusiwallpa"
+ Apumayta: "Apumayta"
+ Awki: "Awki"
+ Chawpi: "Chawpi"
+ Sayri: "Sayri"
+ Titu: "Titu"
+ Huayna: "Huayna"
+ Chalkuchimac: "Chalkuchimac"
+ Quisquis: "Quisquis"
+ Quiso: "Quiso"
+ Wiraqucha: "Wiraqucha"
+ Urco: "Urco"
+ Rocca: "Rocca"
+ Yawar: "Yawar"
+ Llapa: "Llapa"
+ Waman: "Waman"
+ Uturunku: "Uturunku"
+
+#Female First Names
+
+ Cura: "Cura"
+ Cusi: "Cusi"
+ Coya: "Coya"
+ Cuxirimay: "Cuxirimay"
+ Tocto: "Tocto"
+ Paccha: "Paccha"
+ Azarpay: "Azarpay"
+ Kispe: "Kispe"
+ Kura: "Kura"
+ Marca: "Marca"
+ Kusi: "Kusi"
+ Rawa: "Rawa"
+ Osika: "Osika"
+ Anawarque: "Anawarque"
+ Kontarwachu: "Kontarwachu"
+ Quya: "Quya"
+ Cuyllor: "Cuyllor"
+ Rontu: "Rontu"
+ Cimpo: "Cimpo"
+ Qori: "Qori"
+ Koka: "Koka"
+
+#Surnames
+ Yupanki: "Yupanki"
+ Amaru: "Amaru"
+ Inka: "Inka"
+ Qhapaq: "Qhapaq"
+ Hanan: "Hanan"
+
+ Achachau: "Achachau"
+ Allawca: "Allawca"
+ Alqa: "Alqa"
+ Wankahauri: "Wankahauri"
+ Uywa: "Uywa"
+ Maygua: "Maygua"
+ NinahuamA_n: "Ninahuamán"
+ Muthuqanchis: "Muthuqanchis"
+ Ankwaman: "Ankwaman"
+ Awqitayasi: "Awqitayasi"
+ Sayritupac: "Sayritupac"
+ Siwi: "Siwi"
+ Willca: "Willca"
+ Yacupaico: "Yacupaico"
+ Tikawanka: "Tikawanka"
+ Pinchi: "Pinchi"
+ Pachari: "Pachari"
+ Pawkar: "Pawkar"
+ Chakana: "Chakana"
+ Waylla: "Waylla"
+ Huaman: "Huaman"
+ Chukimango: "Chukimango"
+ Kuntur: "Kuntur"
+ ChihuA_n: "Chihuán"
+ Wallpa: "Wallpa"
