--- a/localization/english/romaioi_names_l_english.yml
+++ b/localization/english/romaioi_names_l_english.yml
@@ -149,3 +149,43 @@
  Kuntur: "Kuntur"
  ChihuA_n: "Chihuán"
  Wallpa: "Wallpa"
+
+#Nahuatl
+
+#Male
+
+Yaotl: "Yāōtl"
+Matlalihuitl: "Matlalihuitl"
+Nochehuatl: "Nōchēhuatl
+Coatl: "Coātl"
+Tototl: "Tōtōtl"
+Cuauhtl: "Cuāuhtl"
+Tochtli: "Cuāuhtl"
+Zolin: "Zōlin"
+Matlal: "Mātlal"
+Xōchitl: "Xōchitl"
+
+#Female
+
+Teyacapan: "Tēyacapan"
+Tlahco: "Tlahco"
+Teicuih: "Teicuih"
+Necahual: "Necāhual"
+Xocoh: "Xōcoh"
+Centehua: "Centehua"
+Xocoyotl: "Xōcoyōtl"
+Tlahcoehua: "Tlahcoēhua"
+Tepin: "Tepin"
+Cihuaton: "Cihuātōn"
+
+#Surnames
+
+Ixtlilxochitl: "Ixtlilxóchitl"
+Techotlalatzin: "Techotlalatzin"
+Chimalpahin: "Chimalpahin "
+Quauhtlehuanitzin : "Quauhtlehuanitzin"
+Ocelotl: "Ocelotl"
+Ometochtzin: "Ometochtzin"
+Xocoyotzin: "Xocoyotzin"
+Tezozomoc: "Tezozomoc"
+
