--- a/localization/english/romaioi_misc_l_english.yml
+++ b/localization/english/romaioi_misc_l_english.yml
@@ -111,7 +111,7 @@ mandate_of_heaven:0 "Mandate of Heaven"
 vive_la_revolution:0 "Vive la Révolution"
 nomad_heritage:0 "Nomadic Heritage"
 ig_influence_modifier:0 "BR Influence Modifier"
-spice_income:0 "High demand for Spice"
+spice_income:0 "Spice Trade"
 eet_spice_dividends:0 "EET dividend income"
 hajj:0 "Hajj"
 holy_warriors:0 "Holy Warriors"
@@ -122,6 +122,7 @@ great_city_state:0 "Magnificent City"
 merchant_state:0 "Grand Port"
 
 #Buildings
+building_spices_plantation:0 "Spice Plantation"
 building_great_palace:0 "Great Palace"
 building_hippodrome:0 "Hippodrome"
 #building_statue_of_liberty:0 "Statue of Elysium"
@@ -133,6 +134,10 @@ building_university_athens:0 "Academy of Athens"
 building_libary_alexandria:0 "Libary of Alexandria"
 building_house_wisedom:0 "House Of Wisedom"
 
+#Production Method Groups
+pmg_base_building_spices_plantation:0 "Base"
+pmg_train_automation_building_spices_plantation:0 "Train Automation"
+pmg_ownership_land_building_spices_plantation:0 "Ownership"
 pmg_base_building_great_palace:0 "Great Palace"
 pmg_base_building_hippodrome:0 "Hippodrome"
 #pmg_base_building_statue_of_liberty:0 "Statue of Elysium"
@@ -157,6 +162,12 @@ pm_default_building_university_constantinople:0 "University of Konstantinople"
 pm_default_building_university_athens:0 "Academy of Athens"
 pm_default_building_libary_alexandria:0 "Libary of Alexandria"
 pm_default_building_house_wisedom:0 "House Of Wisedom"
+automatic_irrigation_building_spices_plantation:0 "Automatic Irrigation"
+default_building_spices_plantation:0 "Basic Production"
+
+#Modifiers
+modifier_building_output_spices_add:0 "@spices! Spices output per level"
+modifier_building_output_spices_add_desc:0 "The amount of @spices! Spices produced by buildings"
 
 #Wars
 
