--- a/localization/english/replace/misc_l_english.yml
+++ b/localization/english/replace/misc_l_english.yml
@@ -18,3 +18,5 @@
   pmg_canal_boats: "Canal Maintenance"
   pm_no_tugs_building_canals: "No Tugs"
   pm_tugging_building_canals: "Tugboat Fleet"
+
+  dynasty_bourbon: "Carolingion"
