--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -250,8 +250,8 @@
  FTJ_ADJ:0 "Futa Jallon"
  FTR:0 "Futa Toro"
  FTR_ADJ:0 "Futa Toro"
- GAL:0 "Galicia-Lodomeria"
- GAL_ADJ:0 "Galician-Lodomerian"
+ GAL:0 "Galicia–Volhynia"
+ GAL_ADJ:0 "Galician"
  GAM:0 "Gambia"
  GAM_ADJ:0 "Gambian"
  GBR:0 "England"
@@ -405,6 +405,7 @@
  KUT:0 "Kutch"
  KUT_ADJ:0 "Kutchi"
  KUR:0 "Arbil"
+ KUR_ADJ:0 "Kurd"
  KZM:0 "Kazembe"
  KZM_ADJ:0 "Kazembe"
  LAD:0 "Ladakh"
