--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -774,7 +774,7 @@
  HUB_NAME_STATE_LUHANSK_mine:1 "Aleksandrovka"
  HUB_NAME_STATE_LUHANSK_farm:1 "Ekaterinoslav"
  HUB_NAME_STATE_LUHANSK_wood:1 "Aleksandrovsk"
- HUB_NAME_STATE_KURSK_city:0 "Orel"
+ HUB_NAME_STATE_KURSK_city:0 "Ryazan"
  HUB_NAME_STATE_KURSK_mine:0 "Voronezh"
  HUB_NAME_STATE_KURSK_farm:0 "Kursk"
  HUB_NAME_STATE_KURSK_wood:0 "Yefremov"
@@ -800,13 +800,13 @@
  HUB_NAME_STATE_ARKHANGELSK_mine:0 "Pinega"
  HUB_NAME_STATE_ARKHANGELSK_farm:0 "Shangaly"
  HUB_NAME_STATE_ARKHANGELSK_wood:0 "Bereznik"
- HUB_NAME_STATE_TVER_city:0 "Yaroslavl"
+ HUB_NAME_STATE_TVER_city:0 "Tver"
  HUB_NAME_STATE_TVER_mine:0 "Vologda"
- HUB_NAME_STATE_TVER_farm:0 "Tver"
+ HUB_NAME_STATE_TVER_farm:0 "Yaroslavl"
  HUB_NAME_STATE_TVER_wood:0 "Rybinsk "
  HUB_NAME_STATE_GALICH_city:0 "Kotlas"
  HUB_NAME_STATE_GALICH_mine:0 "Konosha"
- HUB_NAME_STATE_GALICH_farm:0 "Kostroma"
+ HUB_NAME_STATE_GALICH_farm:0 "Galich"
  HUB_NAME_STATE_GALICH_wood:0 "Velsk"
  HUB_NAME_STATE_MOSCOW_city:0 "Moscow"
  HUB_NAME_STATE_MOSCOW_mine:0 "Skopin"
