--- a/localization/english/romaioi_countries_l_english.yml
+++ b/localization/english/romaioi_countries_l_english.yml
@@ -52,8 +52,16 @@
  RYA_ADJ:0 "Ryazan"
  SMO:0 "Smolensk"
  SMO_ADJ:0 "Smolensk"
+ TVE: "Tver"
+ TVE_ADJ: "Tverite"
+ NZH: "Nizhny Novgorod"
+ NZH_ADJ: "Nizhegorodian"
+ UGG: "Galich"
+ UGG_ADJ: "Galichian"
  NSE:0 "Jämland Härjedalen"
  NSE_ADJ:0 "Jämland Härjedalen"
+ ARD: "Ardalan"
+ ARD_ADJ: "Ardalani"
 
  KLV:0 "Klein-Venedig"
  KLV_ADJ:0 "Welser"
@@ -195,7 +203,7 @@
  MUR:0 "Murri"
  PMA:0 "Pama"
  NGN:0 "Ngarna"
- ARD:0 "Aranda"
+ AR0:0 "Aranda"
  YLN:0 "Yolngu"
  NGP:0 "Ngumpin"
  GNW:0 "Gunwinyguan"
