--- a/localization/english/romaioi_events_l_english.yml
+++ b/localization/english/romaioi_events_l_english.yml
@@ -253,6 +253,9 @@ notbyz_themata_decision_desc:0 "Themata are the main regional military divisions
 notbyz_tagmata_decision:0 "Tagmata Primacy"
 notbyz_tagmata_decision_desc:0 "Tagmata are the elite military units of the Basileía Romaíon. They are organized into regiments, each with its own specialized role and equipment. The most prominent and powerful tagmata are the Scholai, the Excubitors, and the Vigla. The Scholai are the imperial guard, responsible for protecting the Basileus and his family. The Excubitors are a heavy infantry unit, while the Vigla are a cavalry unit. The tagmata are typically composed of professional soldiers, and are considered the most elite and well-trained troops in the Byzantine army. They are also among the best-paid soldiers in the empire."
 
+
+remove_noble_privileges_decision:0 "Remove excessive noble privileges"
+remove_noble_privileges_decision_desc:0 "Remove excessive noble privileges"
 vive_la_revolution_decision:0 "Vive la Revolution"
 vive_la_revolution_decision_desc:0 "The French Revolution was a period of radical political and societal change in France that began with the Estates General and ended with the formation of the French Consulate and finally leading to the The First French Empire, Napoleonic France, was the empire ruled by Napoleon Bonaparte, who established French hegemony over much of continental Europe."
 
@@ -308,4 +311,6 @@ annex_JPI:0 "Integrate Pashifikku"
 annex_JPI_desc:0 "Integrate Pashifikku"
 annex_NWC:0 "Integrate Nordhafsveðr"
 annex_NWC_desc:0 "Integrate Nordhafsveðr"
+annex_russians:0 "Integrate the Other Russian Princes"
+annex_russians_desc:0 "The Tatars have long trusted us to collect tribute from the other Russian princes on their behalf. We will take advantage of our favorable ties with the tatar court and persuade the Khan to ignore our expansion over the other Russian Princes."
 
