--- a/localization/english/romaioi_misc_l_english.yml
+++ b/localization/english/romaioi_misc_l_english.yml
@@ -106,6 +106,7 @@ patriarch_alexandria:0 "Patriarch Alexandria"
 patriarch_jerusalem:0 "Patriarch Jerusalem"
 patriarch_antioch:0 "Patriarch Antioch"
 holy_roman_empire:0 "Imperator Romanorum"
+noble_privileges:0 "Noble Privileges"
 eastern_roman_empire:0 "Basileus Romaíon"
 mandate_of_heaven:0 "Mandate of Heaven"
 vive_la_revolution:0 "Vive la Révolution"
